src/index.css
/* ... */
.fade {
  opacity: 0;
  visibility: hidden;
  transition:
    opacity ease-in-out 0.2s,
    visibility ease-in-out 0.2s;
}

.fadein {
  opacity: 1;
  visibility: visible;
}

.fadeout {
  opacity: 0;
  visibility: hidden;
}

.planner-editor-view .cm-editor .cm-tooltip {
  border: 1px solid #bac4cd;
  background: white;
  border-radius: 0 8px 8px 8px;
  overflow: hidden;
}

.planner-editor-view .cm-errorLineGutter {
  background-color: #e53e3e;
  color: white;
}

.planner-editor-view .cm-panels-top {
  z-index: 40;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete ul {
  border: none;
  color: #171718;
  font-family: Poppins, sans-serif;
  max-height: 25rem;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete ul li {
  display: flex;
  align-items: center;
  padding: 0.5rem 0;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete ul li[aria-selected] {
  background: #e9ecef;
  color: #171718;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete img {
  display: inline-block;
  width: 2rem;
  margin: 0 0.5rem;
  object-fit: contain;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .cm-completionIcon,
.planner-editor-view .cm-editor .cm-tooltip-autocomplete .cm-completionLabel {
  display: none;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .cm-completionIcon.cm-completionIcon-liftoscript {
  padding-left: 0.25rem;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .cm-completionIcon.cm-completionIcon-liftoscript,
.planner-editor-view .cm-editor .cm-tooltip-autocomplete .cm-completionIcon-liftoscript + .cm-completionLabel {
  display: inherit;
}

.planner-editor-view .cm-editor {
  height: auto;
  min-height: 6rem;
  font-size: 1rem;
}

.planner-editor-view .cm-line {
  height: 1.35rem;
}

.planner-stats-tooltip {
  top: 30px;
  right: 0;
}

.planner-editor-error {
  top: 0px;
}

@media (max-width: 640px) {
  .planner-stats-tooltip {
    top: 30px;
    left: 0;
    right: auto;
  }

  .planner-editor-error {
    top: 45px;
  }
}

.planner-editor-view .cm-scroller {
  min-height: 6rem;
}

.exercise-completion-title {
  font-size: 1rem;
}

.property-completion {
  max-width: 20rem;
  padding: 0 0.5rem;
}

.property-completion-title {
  font-size: 0.9rem;
  font-weight: bold;
}

.property-completion-description {
  padding-top: 0.25rem;
  font-size: 0.75rem;
  white-space: initial;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .function-completion-description ul {
  list-style: disc;
  padding-left: 1rem;
  padding-top: 0.25rem;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .function-completion-description ul li {
  display: list-item;
  padding: 0;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .function-completion-description p {
  padding-top: 0.25rem;
}

.planner-editor-view .cm-editor .cm-tooltip-autocomplete .function-completion-description code {
  font-family: "Iosevka Web" !important;
}

.function-completion {
  max-width: 25rem;
  padding: 0 0.5rem;
}

.function-completion-title {
  font-size: 0.9rem;
  font-weight: bold;
}

.function-completion-description {
  font-size: 0.75rem;
  padding-top: 0.25rem;
  white-space: initial;
}

.equipment-completion {
  padding-left: 1rem;
}

.equipment-completion-title {
  font-size: 1rem;
}

.exercise-default-image {
  width: 2rem;
  height: 2rem;
}

.exercise-completion-description-info {
  font-size: 0.75rem;
}

.exercise-completion-description-info-label {
  color: #607284;
}

.exercise-completion-description-info-data {
  font-weight: bold;
}

.exercise-default-image {
  margin: 0 0.5rem;
}

.planner-exercise-graph .u-legend {
  margin-top: -30px;
}

.tok-variableName {
  color: #28839f;
}

.tok-keyword {
  color: #708;
}

.tok-literal {
  color: #164;
}

.tok-meta {
  color: #6f6e24;
}

.tok-comment {
  color: #8b9bab;
}

.tok-atom {
  color: #940;
}

.tok-propertyName {
  color: #8b9bab;
}

.tok-attributeName {
  color: #940;
}

.tok-attributeValue {
  color: #28839f;
}

.tok-number {
  color: #164;
}

.tok-string {
  color: #28839f;
}

.blinking {
  animation: blink 1s infinite;
}

@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 1;
  }
}

/* purgecss end ignore */

@tailwind utilities;

